--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 <!--<button id="click-me-button" type="button"-->
         <!--onclick="tutorial.webapp.TutorialApp().addClickedMessage()">Click me!</button>-->
 <!-- Include Scala.js compiled code -->
+<!-- Run JSApp -->
 <script type="text/javascript" src="./target/scala-2.12/scala-js-tutorial-jsdeps.js"></script>
 <script type="text/javascript" src="./target/scala-2.12/scala-js-tutorial-fastopt.js"></script>
-<!-- Run tutorial.webapp.TutorialApp -->
-<script type="text/javascript">
-  tutorial.webapp.TutorialApp().main();
-</script>
+<!-- Run JSApp -->
+<script type="text/javascript" src="./target/scala-2.12/scala-js-tutorial-launcher.js"></script>
 </body>
 </html>
